--- a/chat.html
+++ b/chat.html
@@ -5,10 +5,10 @@
     <link rel="stylesheet" href="css/styles.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width= , initial-scale=1.0">
-    <title>Chats - Kokoa Clone</title>
+    <title>Chat - Kokoa Clone</title>
 </head>
 
-<body>
+<body id="chat-screen">
     <div class="status-bar">
         <div class="status-bar__column">
             <span>No Service</span>
@@ -24,50 +24,63 @@
         </div>
     </div>
 
-    <header class="screen-header">
-        <h1 class="screen-header__title">Chats</h1>
-        <div class="screen-header__icons"></div>
-        <span><i class="fa-solid fa-magnifying-glass fa-lg"></i></span>
-        <span><i class="fa-solid fa-comment-dots fa-lg"></i></span>
-        <span><i class="fa-solid fa-music fa-lg"></i></span>
-        <span><i class="fa-solid fa-gear fa-lg"></i></span>
+
+    <header class="alt-header">
+        <div class="alt-header__column">
+            <a href="chats.html">
+                <i class="fa-solid fa-angle-left fa-2x"></i>
+            </a>
+        </div>
+
+        <div class="alt-header__column">
+            <h1 class="alt-header__title">Nicolas</h1>
+        </div>
+        <div class="alt-header__column">
+            <span><i class="fa-solid fa-magnifying-glass fa-lg"></i></span>
+            <span><i class="fa-solid fa-bars fa-lg"></i></span>
+        </div>
+
     </header>
 
-    <main class="main-screen">
-        <div class="user-component">
-            <div class="user-component__column">
-                <img class="user-component__avatar user-component__avatar" src="images/IMG_8792.jpg" />
-                <div class="user-component__text">
-                    <h4 class="user-component__title">KokoaTalk</h4>
-                    <h6 class="user-component__subtitle">Please check My Kokoa Account Info</h6>
+
+    <main class="main-screen main-chat">
+        <div class="chat__timestamp">
+            Saturday, Nov 16 2024
+        </div>
+
+        <div class="message-row">
+            <img src="images/IMG_8792.jpg">
+            <div class="messsage-row__content">
+                <span class="message__author">Nicolas</span>
+                <div class="message__info">
+                    <span class="message__bubble">Hi!</span>
+                    <span class="message__time">21:27</span>
                 </div>
-            </div>
-            <div class="user-component__column">
-                <span class="user-component__time">11:22</span>
-                <div class="badge">1</div>
             </div>
         </div>
 
+        <div class="message-row message-row--own">
+            <div class="messsage-row__content">
+                <div class="message__info">
+                    <span class="message__bubble">Hi Nice to meet you</span>
+                    <span class="message__time">21:27</span>
+                </div>
+            </div>
+        </div>
     </main>
 
-    <nav class="nav">
-        <ul class="nav__list">
-            <li class="nav__btn">
-                <a class="nav__link" href="friends.html"><i class="far fa-user fa-2x"></i></a>
-            </li>
-            <li class="nav__btn">
-                <span class="nav__notification badge">1</span>
-                <a class="nav__link" href="chat.html"><i class="fas fa-comment fa-2x"></i></a>
-            </li>
-            <li class="nav__btn">
-                <a class="nav__link" href="find.html"><i class="fa-solid fa-magnifying-glass fa-2x"></i></a>
-            </li>
-            <li class="nav__btn">
-                <span class="nav__dot"></span>
-                <a class="nav__link" href="more.html"><i class="fa-solid fa-ellipsis fa-2x"></i></a>
-            </li>
-        </ul>
-    </nav>
+    <form class="reply">
+        <div class="reply__column">
+            <i class="fa-regular fa-square-plus fa-lg"></i>
+        </div>
+        <div class="reply__column">
+            <input type="text" placeholder="Write a message.." />
+            <i class="fa-regular fa-face-smile"></i>
+            <button>
+                <i class="fa-solid fa-arrow-up"></i>
+            </button>
+        </div>
+    </form>
 
     <script src=" https://kit.fontawesome.com/3ecd974291.js" crossorigin="anonymous"></script>
 </body>
