--- a/find.html
+++ b/find.html
@@ -26,11 +26,12 @@
 
     <header class="screen-header">
         <h1 class="screen-header__title">Find</h1>
-        <div class="screen-header__icons"></div>
-        <span><i class="fa-solid fa-magnifying-glass fa-lg"></i></span>
-        <div class="screen-header__gear">
-            <span class="screen-header__dot"></span>
-            <span><i class="fa-solid fa-gear fa-lg"></i></span>
+        <div class="screen-header__icons">
+            <span><i class="fa-solid fa-magnifying-glass fa-lg"></i></span>
+            <div class="screen-header__gear">
+                <span class="screen-header__dot"></span>
+                <span><i class="fa-solid fa-gear fa-lg"></i></span>
+            </div>
         </div>
     </header>
 
@@ -96,7 +97,7 @@
             </li>
             <li class="nav__btn">
                 <span class="nav__notification badge">1</span>
-                <a class="nav__link" href="chat.html"><i class="far fa-comment fa-2x"></i></a>
+                <a class="nav__link" href="chats.html"><i class="far fa-comment fa-2x"></i></a>
             </li>
             <li class="nav__btn">
                 <a class="nav__link" href="find.html"><i class="fa-solid fa-magnifying-glass fa-2x"></i></a>
