--- a/more.html
+++ b/more.html
@@ -26,16 +26,16 @@
 
     <header class="screen-header">
         <h1 class="screen-header__title">More</h1>
-        <div class="screen-header__icons"></div>
-        <span><i class="fa-solid fa-magnifying-glass fa-lg"></i></span>
-        <span><i class="fa-solid fa-music fa-lg"></i></span>
-        <div class="screen-header__gear"><a href="settings.html">
-                <span class="screen-header__dot"></span>
-                <span>
-
-                    <i class="fa-solid fa-gear fa-lg"></i>
-                </span>
-            </a>
+        <div class="screen-header__icons">
+            <span><i class="fa-solid fa-magnifying-glass fa-lg"></i></span>
+            <span><i class="fa-solid fa-music fa-lg"></i></span>
+            <div class="screen-header__gear"><a href="settings.html">
+                    <span class="screen-header__dot"></span>
+                    <span>
+                        <i class="fa-solid fa-gear fa-lg"></i>
+                    </span>
+                </a>
+            </div>
         </div>
     </header>
 
@@ -116,7 +116,7 @@
             </li>
             <li class="nav__btn">
                 <span class="nav__notification badge">1</span>
-                <a class="nav__link" href="chat.html"><i class="far fa-comment fa-2x"></i></a>
+                <a class="nav__link" href="chats.html"><i class="far fa-comment fa-2x"></i></a>
             </li>
             <li class="nav__btn">
                 <a class="nav__link" href="find.html"><i class="fa-solid fa-magnifying-glass fa-2x"></i></a>
