--- a/chat.html
+++ b/chat.html
@@ -81,6 +81,9 @@
             </button>
         </div>
     </form>
+    <div id="no-mobile">
+        <span>Your screen is too big..</span>
+    </div>
 
     <script src=" https://kit.fontawesome.com/3ecd974291.js" crossorigin="anonymous"></script>
 </body>
