--- a/find.html
+++ b/find.html
@@ -108,6 +108,9 @@
             </li>
         </ul>
     </nav>
+    <div id="no-mobile">
+        <span>Your screen is too big..</span>
+    </div>
 
     <script src=" https://kit.fontawesome.com/3ecd974291.js" crossorigin="anonymous"></script>
 </body>
