--- a/friends.html
+++ b/friends.html
@@ -99,6 +99,11 @@
     <div id="splah-screen">
         <i class="fas fa-comment"></i>
     </div>
+
+    <div id="no-mobile">
+        <span>Your screen is too big..</span>
+    </div>
+
     <script src=" https://kit.fontawesome.com/3ecd974291.js" crossorigin="anonymous"></script>
 </body>
 
